# gitstat

./: Cargo.toml  LICENSE  README.md  build-release.sh
src/: main.rs
