[package]
name = "gitstat"
version = "0.1.0"
edition = "2021"
description = "Display GitHub activity schema for any user - Terminal-adaptive CLI with beautiful blue theme"
license = "MIT"
authors = ["Nathan Ben Soussan <nath.bensoussan@gmail.com>"]
repository = "https://github.com/nathbns/gitstat"
homepage = "https://github.com/nathbns/gitstat"
keywords = ["github", "cli", "git", "contributions", "activity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
terminal_size = "0.3"
